# drunk_snake

./: README.md  run_HPC_drunkSnake.sh  run_test_mpi.sh
mpi/: .config_script_mpi.sh.swp  anmeldung_hpc_network.txt  config_script_mpi.sh  output_runtime_measurement.txt  snake_mpi.cpp
mpi/config/: host_file  host_file_eikon2  host_file_eikon3  host_file_hpc  host_file_old  host_file_test  ssh_config_for_students
mpi/mpi_dummy_test/: CMakeLists.txt  main.cpp  mpi_class_tester.cpp  mpi_scatter_gather.cpp  mpi_traffic_test.cpp  snake_mpi.h
reinforcedSnakeV2/: CMakeLists.txt  defEnums.h  game.cpp  game.h  generate.cpp  learning.cpp  learning.h  learning2.cpp  learning2.h  mpi_dynamic.cpp  mpi_dynamic.cpp.autosave  policy.cpp  policy.h  randomGen.cpp  randomGen.h  simulate.cpp  snakeBodies.cpp  snakeBodies.h  state.cpp  state.h  structureOfStates.cpp  structureOfStates.h  utility.cpp  utility.h
reinforcedSnakeV2/tests/: CMakeLists.txt  testSnakeBodies.cpp  testStruct.cpp  testStructWithBodies.cpp  test_create_bodies.cpp  testrandom.cpp  teststate.cpp  testutil.cpp
snake/: algorithm.cpp  algorithm.h  enums.h  main.cpp  snake.cpp  snake.h  test.h  vElement.h
src/: snake-game.py
